--- a/template/step_definitions.xml
+++ b/template/step_definitions.xml
@@ -16,7 +16,7 @@
 			<Synonym>
 				<v8:item>
 					<v8:lang>ru</v8:lang>
-					<v8:content>Step definitions</v8:content>
+					<v8:content>step_definitions</v8:content>
 				</v8:item>
 			</Synonym>
 			<Comment/>
